# VideoUpgrader

./: .gitattributes  .gitignore  AGENTS.md  README.md  build_VideoUpgrader.md  build_upscalers.md  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
config/: model_catalog.json  model_preferences.json
context/: caption_removal_editor_comparison.md  caption_removal_model_plan.md  colormnet_integration_plan.md  implementation_plan.md  pipeline_performance_plan.md  pytorch_streaming_upgrade_plan.md  requirements.md
python/: requirements-tensorrt.txt  requirements.txt
scripts/: analyze_caption_removal_model_comparison.py  bootstrap.ps1  build.ps1  capture_readme_screenshots.mjs  common.ps1  create_caption_removal_comparison_samples.py  desktop-test.ps1  desktop_blind_comparison_smoke.mjs  desktop_color_context_smoke.mjs  desktop_gui_pipeline_benchmark.mjs  desktop_jobs_window_recovery_smoke.mjs  desktop_webview_playback_smoke.mjs  generate-benchmarks.ps1  gui-test.ps1  native_desktop_smoke.py  run.ps1  run_caption_removal_comparison_baseline.py  run_caption_removal_lama_baseline.py  run_caption_removal_propainter_baseline.py  run_deepremaster_real_gui_once.mjs  run_rvrt_real_gui_once.mjs  run_rvrt_real_gui_once.mjs.d.ts  stop.ps1  summarize_caption_removal_comparison.py  summarize_caption_removal_model_comparison.py  test.ps1
src/: App.tsx  mjs-modules.d.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+67 files in other folders)
