[package]
name = "upscaler"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
open = "5.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tauri = { version = "2.1.1", features = [] }
tauri-plugin-dialog = "2"

[lib]
name = "upscaler_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
